fixed issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,6 @@ a.navbar-brand {
 }
 .photo1 {
   padding-top: 5%;
-  padding-left: 10%;
 }
 .rows {
   text-align: left;
